--- a/concept_contact.html
+++ b/concept_contact.html
@@ -1,157 +1,174 @@
 <!doctype html>
 	<html lang="en">
+		
 		<head>
-  			<meta charset="utf-8">
-  			<!-- CSS -->
-  			<link rel="stylesheet" href="concept_contact.css">
-  			<!-- Bootstrap -->
-  			<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">	
-				<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-				<title> La Chambre Noire </title>
-  			<!--***-->	
+			  <meta charset="utf-8">
+			  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  				<!-- CSS -->
+  				<link rel="stylesheet" href="concept_contact.css">
+  					<!-- Bootstrap -->
+					<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+					<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+					<title> La Chambre Noire </title>	
 		</head>
 
+
 		<body>
+
 			<!--
       #############
        H E A D E R 
        ###############
       -->
-      <header>  
-        <nav class="navbar navbar-expand-sm navbar-light bg-light">
-          
-          <a href="index.html"><img class="navbar-brand" src="images/logo.png"></a>
-          <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarMenu">
-
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a href="enigme-page.html" class="nav-link"> L'énigme du mois </a>
-              </li>
-              <li class="nav-item">
-                <a href="enigme-page.html#enigne_du_mois_precedent" class="nav-link"> Enigmes résolues </a>
-              </li>
-              <li class="nav-item">
-                <a href="concept_contact.html" class="nav-link"> Règles du jeu </a>
-              </li>
-              <li class="nav-item" >
-                <a href="concept_contact.html#contact" class="nav-link"> Votre solution </a>
-              </li>
-              <li class="nav-item" >
-                <a href="about.html" class="nav-link"> Le maître du jeu </a>
-              </li>
-            </ul>
-          </div>  
-        </nav>
-      </header>
+		<header>  
+			<nav class="navbar navbar-expand-sm navbar-light bg-light">
+			<a href="index.html"><img class="navbar-brand" src="images/logo.png"></a>
+							<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+								<span class="navbar-toggler-icon"></span>
+							</button>
+					<div class="collapse navbar-collapse" id="navbarMenu">
+									<ul class="navbar-nav ml-auto">
+										<li class="nav-item">
+											<a href="enigme-page.html" class="nav-link"> L'énigme du mois </a>
+										</li>
+										<li class="nav-item">
+											<a href="enigme-page.html#enigne_du_mois_precedent" class="nav-link"> Enigmes résolues </a>
+										</li>
+										<li class="nav-item">
+											<a href="concept_contact.html" class="nav-link"> Règles du jeu </a>
+										</li>
+										<li class="nav-item" >
+											<a href="concept_contact.html#contact" class="nav-link"> Votre solution </a>
+										</li>
+										<li class="nav-item" >
+											<a href="about.html" class="nav-link"> Le maître du jeu </a>
+										</li>
+									</ul>
+								</div>  
+			</nav>
+		</header>
 	      <!--
 	      ###################
 	       F I N  H E A D E R 
 	       ##################
 	      -->
 
-			<!-- CONCEPT -->
-			<section>
-				<article>
-					<div id="concept" class="alert alert-secondary" role="alert">
-						<h2> Le concept</h2>
+
+
+	      <!--
+	      ###################
+	          C O N C E P T 
+	       ##################
+				-->	
+			<div id="concept" class="alert alert-secondary" role="alert">
+				<h2> Le concept</h2>
+			</div>	
+			<section class="container-fluid">	
+					<div class="row d-flex justify-content-center align-items-center">	
+							<div class="col-md-5">
+								<img src="https://via.placeholder.com/450x450" class="centrer_photo">
+								
+							</div>
+								<div class="col-md-7 p-0">
+									<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
+									<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes.</p>
+									<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis.</p>
+								</div>
+						</div>
+							<h2>Les règles</h2>
+						<div class="row d-flex justify-content-center align-items-center">
+							<div class="col-md-2 p-3">
+								<img src="images/number1.png" class="centrer_photo">
+							</div>
+							<div class="col-md-10 p-3">
+								<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
+							</div>
+							<div class="col-md-2 p-3">
+								<img src="images/number2.png" class="centrer_photo">
+							</div>
+							<div class="col-md-10 p-3">
+								<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
+							</div>
+							<div class="col-md-2 p-3">
+								<img src="images/number3.png" class="centrer_photo">
+							</div>
+							<div class="col-md-10 p-3">
+								<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
+							</div>
+						</div>
 					</div>
-					<div class="row align-items-center">
-						<div class="col-md-5 p-3">
-							<img src="https://via.placeholder.com/450x450" class="centrer_photo">
-						</div>
-						<div class="col-md-7 p-3">
-							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
-							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes.</p>
-							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis.</p>
-						</div>
-					</div>
-					<h2>Les règles</h2>
-					<div class="row align-items-center">
-						<div class="col-md-2 p-3">
-							<img src="images/number1.png" class="centrer_photo">
-						</div>
-						<div class="col-md-10 p-3">
-							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
-						</div>
-						<div class="col-md-2 p-3">
-							<img src="images/number2.png" class="centrer_photo">
-						</div>
-						<div class="col-md-10 p-3">
-							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
-						</div>
-						<div class="col-md-2 p-3">
-							<img src="images/number3.png" class="centrer_photo">
-						</div>
-						<div class="col-md-10 p-3">
-							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
-						</div>
-					</div>
-				</article>
 			</section>
-			<!-- FIN CONCEPT -->
+			<!-- 
+			######################
+			F I N  C O N C E P T
+			################## 
+			-->
+
+
 
 			<!-- 
 			######################
 			C O N T A C T 
 			################## 
 			-->
-
+				<!-- Bandeau titre -->
+		
 		    <div id="contact" class="alert alert-secondary" role="alert">
-				<h2> Solution / Contact </h2>
-			</div>
-			<div class="container-fluid">
-				<!-- Image -->		
-				<div class="row">
-					<div class="col-md-6 d-flex justify-content-end">
-						<img class="img-paris" src="images/contact.jpg">
-					</div>
-
-				<!-- Formulaire -->
-
-				<div class="col-md-6 d-flex justify-content-start">
-					<div id="contact" class="contact">
-						<div class="input group input-group-lg">
-							<input type="texte" class="form-control" aria-describedby="sizaing-addon1" placeholder="Nom">
-						</div>
-						<div class="input group input-group-lg">
-							<input type="texte" class="form-control" aria-describedby="sizaing-addon1" placeholder="Prénom">
-						</div>
-						<div class="input group input-group-lg">
-							<input type="texte" class="form-control" aria-describedby="sizaing-addon1" placeholder="E-mail">
+					<h2> Solution / Contact </h2>
+				</div>	
+				<div class="container-fluid">
+					<div class="row d-flex align-items-center">
+						<!-- Image -->
+						<div class="col-md-5">
+							<img class="img-paris" src="images/bicycle.jpg">
 						</div>
 
-						<!-- 2 BOUTONS - SOUMETTRE UNE REPONSE - PRISE DE CONTACT -->
-						<div class="form-check">
-							 <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-								<label class="form-check-label" for="exampleRadios1">
-									    Soumettre une réponse
-								</label>
+						<!-- Formulaire -->
+						<div class="col-md-6">
+							<div id="contact" class="contact">
+								<form action="https://formspree.io/alpaca6wild@gmail.com" method="POST">
+									<div class="input group input-group-lg">
+										<input type="texte" name="name" class="form-control" aria-describedby="sizaing-addon1" placeholder="Nom">
 									</div>
-						<div class="form-check">
-							 <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-								<label class="form-check-label" for="exampleRadios2">
-									    Prise de contact
-								</label>
-						</div>
-						<!-- Message -->
-						<div class="input-group">
-							<textarea name="" id="" cols="80" rows="6" class="form-control"></textarea>
-						</div>
-							<button type="button" class="btn btn-outline-dark">Envoyer</button>
-						</div>
-						</div>
+									<div class="input group input-group-lg">
+										<input type="texte" name="firstname" class="form-control" aria-describedby="sizaing-addon1" placeholder="Prénom">
+									</div>
+									<div class="input group input-group-lg">
+										<input type="email" name="_replyto" class="form-control" aria-describedby="sizaing-addon1" placeholder="E-mail">
+									</div>
+		
+									<!-- 2 BOUTONS - SOUMETTRE UNE REPONSE - PRISE DE CONTACT -->
+									<div class="form-check">
+										<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+											<label class="form-check-label" for="exampleRadios1">
+														Soumettre une réponse
+											</label>
+									</div>
+									<div class="form-check">
+										<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+											<label class="form-check-label" for="exampleRadios2">
+														Prise de contact
+											</label>
+									</div>
+										<!-- Message -->
+													<div class="input-group">
+														<textarea name="" id="" cols="80" rows="6" class="form-control" placeholder="Message"></textarea>
+														<button type="submit" value="Send" class="btn btn-outline-dark">Envoyer</button>
+													</div>
+									</div>
+								</form>
+							</div>
 					</div>
 				</div>
-			</div>
-
+		</section>
+		</div>
 			<!-- 
 			##################
 			F I N  C O N T A C T 
 			################## 
 			-->
+
+
 
                 <!--
 		    ############
@@ -160,57 +177,55 @@
 		    -->
 
 		    <div class="footer_body pt-4">
-		      <footer class="row justify-content-center align-items-center">
-		        <div class="col-md-4 footer_column">
-		          <div class="row footer_column1 justify-content-center">
-		            <div class="col-md-12 col-lg-5">
-	                  <a href="enigme-page.html">L'énigme du mois</a>
-	                  <a href="concept_contact.html">Règles du jeu</a>
-	                </div>
-	                <div class="col-md-12 col-lg-5">
-	                  <a href="concept_contact.html#contact">Votre réponse</a>
-	                  <a href="about.html">Le maitre du jeu</a>
-		            </div>
-		          </div>
-		        </div>
-		        <div class="col-md-4 footer_column footer_social_opacity">
-		          <p class="footer_marginp2">La chambre noire sur les réseaux sociaux</p>
-		          <a href="#"><img src="images/facebook.png" alt="#"/></a>
-		          <a href="#"><img src="images/instagram.png" alt="#"/></a>
-		          <a href="#"><img src="images/twitter.png" alt="#"/></a>
-		        </div>
-		        <div class="col-md-12 col-lg-4 footer_column">
-		          <p class="footer_marginp2">Recevez les derniers indices par mail</p>
+				<footer class="row justify-content-center align-items-center ml-0 mr-0">
+					<div class="col-md-4 footer_column ml-0 mr-0">
+					<div class="row footer_column1 justify-content-center ml-0 mr-0">
+						<div class="col-md-12 col-lg-5 ml-0 mr-0">
+						<a href="enigme-page.html">L'énigme du mois</a>
+						<a href="concept_contact.html">Règles du jeu</a>
+						</div>
+						<div class="col-md-12 col-lg-5 ml-0 mr-0">
+						<a href="concept_contact.html#contact">Votre réponse</a>
+						<a href="about.html">Le maitre du jeu</a>
+						</div>
+					</div>
+					</div>
+					<div class="col-md-4 footer_column footer_social_opacity ml-0 mr-0">
+					<p class="footer_marginp2 ml-0 mr-0">La chambre noire sur les réseaux sociaux</p>
+					<a href="#"><img src="images/facebook.png" alt="#"/></a>
+					<a href="#"><img src="images/instagram.png" alt="#"/></a>
+					<a href="#"><img src="images/twitter.png" alt="#"/></a>
+					</div>
+					<div class="col-md-12 col-lg-4 footer_column ml-0 mr-0">
+					<p class="footer_marginp2 ml-0 mr-0">Recevez les derniers indices par mail</p>
 
-		          <form method="post" action="#" class="footer_form">
-		            <input class="footer_input" type="text" name="e-mail" id="e-mail" placeholder="@"/>
-		            <input class="footer_input" type="submit" value="Envoyer"/>
-		          </form>
-
-		        </div>
-		      </footer>
-		      <div class="row align-items-center footer2">
-		          <div class="col-12 footer_column">
-		            <p class="footer_marginp">Alpaga©|plan du site|mentions légales</p>
-		          </div>
-		      </div>
-		    </div>  
-
-
-
+					<form method="post" action="#" class="footer_form ml-0 mr-0">
+						<input class="footer_input" type="text" name="e-mail" id="e-mail" placeholder="@"/>
+						<input class="footer_input" type="submit" value="Envoyer"/>
+					</form>
+				</div>
+					</div>
+				</footer>
+				<div class="row align-items-center footer2 ml-0 mr-0">
+					<div class="col-12 footer_column ml-0 mr-0">
+						<p class="footer_marginp ml-0 mr-0">Alpaga©|plan du site|mentions légales</p>
+					</div>
+				</div>
+				</div>  
 		<!--
 		    ############
 		    F I N  F O O T E R
 		    ############
-		    -->
+		--> 
 
-
+			</div>
 
 			
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+		</div>
 
 		</body>
 	</html>
