--- a/concept_contact.html
+++ b/concept_contact.html
@@ -60,10 +60,11 @@
 			<div id="concept" class="alert alert-secondary titre_h2_concept" role="alert">
 				<h2> Le concept</h2>
 			</div>
+			<br><br> 
 			<section class="container-fluid">
 					<div class="row align-items-center">
 						<div class="col-md-5 p-3">
-							<img src="https://via.placeholder.com/450x450" class="centrer_photo">
+							<img src="images/martin.jpg" class="centrer_photo">
 						</div>
 						<div class="col-md-7 p-3">
 							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
@@ -74,24 +75,25 @@
 					<h2 id="title_roles">Les règles</h2>
 					<div class="row align-items-center">
 						<div class="col-md-2 p-3">
-							<img src="images/number1.png" class="centrer_photo">
+							<img src="images/number-1.png" class="centrer_number">
 						</div>
 						<div class="col-md-10 p-3">
 							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
 						</div>
 						<div class="col-md-2 p-3">
-							<img src="images/number2.png" class="centrer_photo">
+							<img src="images/number-2.png" class="centrer_number">
 						</div>
 						<div class="col-md-10 p-3">
 							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
 						</div>
 						<div class="col-md-2 p-3">
-							<img src="images/number3.png" class="centrer_photo">
+							<img src="images/numbre-3.png" class="centrer_number">
 						</div>
 						<div class="col-md-10 p-3">
 							<p>Et quia Mesopotamiae tractus omnes crebro inquietari sueti praetenturis et stationibus servabantur agrariis, laevorsum flexo itinere Osdroenae subsederat extimas partes, novum parumque aliquando temptatum commentum adgressus. quod si impetrasset, fulminis modo cuncta vastarat. erat autem quod cogitabat huius modi.</p>
 						</div>
 					</div>
+				<br><br><br>
 			</section>
 			<!-- 
 			######################
@@ -111,6 +113,7 @@
 		    <div id="contact" class="alert alert-secondary titre_h2_solution" role="alert">
 					<h2> Solution / Contact </h2>
 				</div>	
+				<br><br>
 				<div class="container-fluid">
 					<div class="row d-flex align-items-center">
 						<!-- Image -->
@@ -158,6 +161,7 @@
 				</div>
 		</section>
 		</div>
+		<br><br><br>
 			<!-- 
 			##################
 			F I N  C O N T A C T 
