--- a/concept_contact.html
+++ b/concept_contact.html
@@ -11,6 +11,8 @@
   			<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">	
 			<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 			<title> La Chambre Noire </title>
+
+			<link rel="stylesheet" type="text/css" href="styles.css">
   			<!--***-->
 		</head>
 
@@ -178,25 +180,25 @@
 		    <div class="footer_body pt-4">
 				<footer class="row justify-content-center align-items-center ml-0 mr-0">
 					<div class="col-md-4 footer_column ml-0 mr-0">
-					<div class="row footer_column1 justify-content-center ml-0 mr-0">
-						<div class="col-md-12 col-lg-5 ml-0 mr-0">
-						<a href="enigme-page.html">L'énigme du mois</a>
-						<a href="concept_contact.html">Règles du jeu</a>
+						<div class="row footer_column1 justify-content-center ml-0 mr-0">
+							<div class="">
+								<ul>
+									<li><a href="enigme-page.html">L'énigme du mois</a></li>
+									<li><a href="concept_contact.html">Règles du jeu</a></li>
+									<li><a href="concept_contact.html#contact">Votre réponse</a></li>
+									<li><a href="about.html">Le maitre du jeu</a></li>
+								</ul>
+							</div>
 						</div>
-						<div class="col-md-12 col-lg-5 ml-0 mr-0">
-						<a href="concept_contact.html#contact">Votre réponse</a>
-						<a href="about.html">Le maitre du jeu</a>
-						</div>
-					</div>
 					</div>
 					<div class="col-md-4 footer_column footer_social_opacity ml-0 mr-0">
-					<p class="footer_marginp2 ml-0 mr-0">La chambre noire sur les réseaux sociaux</p>
-					<a href="#"><img src="images/facebook.png" alt="#"/></a>
-					<a href="#"><img src="images/instagram.png" alt="#"/></a>
-					<a href="#"><img src="images/twitter.png" alt="#"/></a>
+						<p class="footer_marginp2 ml-0 mr-0">La chambre noire sur les réseaux sociaux</p>
+						<a href="#"><img src="images/facebook.png" alt="#"/></a>
+						<a href="#"><img src="images/instagram.png" alt="#"/></a>
+						<a href="#"><img src="images/twitter.png" alt="#"/></a>
 					</div>
 					<div class="col-md-12 col-lg-4 footer_column ml-0 mr-0">
-					<p class="footer_marginp2 ml-0 mr-0">Recevez les derniers indices par mail</p>
+						<p class="footer_marginp2 ml-0 mr-0">Recevez les derniers indices par mail</p>
 
 					<form method="post" action="#" class="footer_form ml-0 mr-0">
 						<input class="footer_input" type="text" name="e-mail" id="e-mail" placeholder="@"/>
@@ -207,7 +209,7 @@
 				</footer>
 				<div class="row align-items-center footer2 ml-0 mr-0">
 					<div class="col-12 footer_column ml-0 mr-0">
-						<p class="footer_marginp ml-0 mr-0">Alpaga©|plan du site|mentions légales</p>
+						<p class="footer_marginp ml-0 mr-0">Crédits: Alpaga | plan du site | mentions légales</p>
 					</div>
 				</div>
 				</div>  
