--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
     <!--
         #############
-        H E A D E R 
+        H E A D E R
         ############
         -->
     <header>
@@ -53,56 +53,38 @@
     </header>
     <!--
         ###################
-        F I N  H E A D E R 
+        F I N  H E A D E R
         ##################
         -->
 
 
-  <!--   <div class="row">
-      <h2 class="col line-about">Le maitre du jeu</h2>
-
+    <div id="concept" class="alert alert-secondary" role="alert">
+      <h2>Le maitre du jeu</h2>
     </div>
- -->
-    <div class="container-fluid">
 
-      <div class="alert alert-secondary titre_h2_about" role="alert">
-          <h2>Le maitre du jeu</h2>
+
+    <div class="row mt-lg-5">
+      <div class="col-md-6 col-xl-4 d-flex justify-content-center align-items-center">
+        <img src="images/about_wildo.jpg" class="img-fluid rounded pl-4 img-about" alt="#">
       </div>
-      <div class="row pt-4 pl-4 pr-4">
-        <div class="col-md-4 d-flex justify-content-center align-items-center">
-          <img src="images/wildo.jpg" class="img-fluid rounded pl-4 img-about" alt="#">
-        </div>
-        <div class="col-md-8 pt-sm-2">
-          <p class="pt-2 text-about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse
-            lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.
-            Maecenas
-            ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est
-            eleifend mi, non fermentum diam nisl sit amet erat.</p>
-          <p class="pt-2 text-about"> Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.
-            Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue.</p>
-          <p class="pt-2 text-about">Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut
-            augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-            Curae;
-            Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales
-            hendrerit.</p>
-        </div>
-      </div>
-
-
-
-    <div class="row">
-      <div class="col-12 d-flex justify-content-center pt-4">
-        <h3>Lorem ipsum</h3>
+      <div class="col-md-6 col-xl-8">
+        <p class="text-about first">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse
+          lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.
+          Maecenas
+          ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est
+          eleifend mi, non fermentum diam nisl sit amet erat.</p>
+        <p class="text-about"> Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.
+          Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue.</p>
       </div>
     </div>
 
 
 
-    <div class="row m-2">
-      <div class="col-md-4 pt-sm-4">
+    <div class="row mt-lg-5">
+      <div class="col-md-4 mb-5">
         <div class="d-flex justify-content-center">
           <div class="card" style="width: 18rem;">
-            <img class="card-img-top rounded" src="https://via.placeholder.com/150x150" alt="Competence 1">
+            <img class="card-img-top rounded" src="images/about_pellicule.png" alt="Competence 1">
             <div class="card-body">
               <h5 class="card-title">Competence 1</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -112,10 +94,10 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 pt-sm-4">
+      <div class="col-md-4 mb-5">
         <div class="d-flex justify-content-center">
           <div class="card" style="width: 18rem;">
-            <img class="card-img-top rounded" src="https://via.placeholder.com/150x150" alt="Competence 1">
+            <img class="card-img-top rounded" src="images/about_pile.png" alt="Competence 1">
             <div class="card-body">
               <h5 class="card-title">Competence 1</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -125,10 +107,10 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 pt-sm-4">
+      <div class="col-md-4">
         <div class="d-flex justify-content-center">
           <div class="card" style="width: 18rem;">
-            <img class="card-img-top rounded" src="https://via.placeholder.com/150x150" alt="Competence 1">
+            <img class="card-img-top rounded" src="images/about_pola.png" alt="Competence 1">
             <div class="card-body">
               <h5 class="card-title">Competence 1</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -139,10 +121,11 @@
         </div>
       </div>
     </div>
+
 
     <!-- SCROLL TOP -->
-      <button onclick="topFunction()" id="myBtn" title="Go to top"></button>
-    <!-- FIN SCROLL -->
+			<button onclick="topFunction()" id="myBtn" title="Go to top"></button>
+		<!-- FIN SCROLL -->
 
 
     <!--
@@ -187,9 +170,6 @@
         </div>
       </div>
     </div>
-    </div>
-
-   
 
 
     <!-- Optional JavaScript -->
@@ -204,7 +184,7 @@
       <script>
         // When the user scrolls down 20px from the top of the document, show the button
         window.onscroll = function() {scrollFunction()};
-        
+
         function scrollFunction() {
           if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
             document.getElementById("myBtn").style.display = "block";
@@ -212,7 +192,7 @@
             document.getElementById("myBtn").style.display = "none";
           }
         }
-        
+
         // When the user clicks on the button, scroll to the top of the document
         function topFunction() {
           document.body.scrollTop = 0;
