--- a/about.html
+++ b/about.html
@@ -63,10 +63,10 @@
           <h2>Le maitre du jeu</h2>
       </div>
       <div class="row pt-4 pl-4 pr-4">
-        <div class="col-md-4 d-flex justify-content-center align-items-center">
-          <img src="images/about_wildo.jpg" class="img-fluid rounded pl-4 img-about" alt="#">
+        <div class="col-md-5 d-flex justify-content-center align-items-center">
+          <img src="images/wildo.jpg" class="img-fluid rounded pl-4 img-about" alt="#">
         </div>
-        <div class="col-md-8 pt-sm-2">
+        <div class="col-md-6 pt-sm-2">
           <p class="pt-2 text-about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse
             lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.
             Maecenas
