--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
         <div class="col-md-3 d-flex align-items-center">
           <div class="img-fluid d-flex justify-content-center align-items-center">
-          <img src="images/wildo.jpg" class="img-fluid d-flex winner_photo rounded-circle justify-content-center align-items-center">
+          <img src="images/about_wildo.jpg" class="img-fluid d-flex winner_photo rounded-circle justify-content-center align-items-center">
         </div>
         </div>
 
