--- a/about.html
+++ b/about.html
@@ -67,18 +67,21 @@
           <img src="images/wildo.jpg" class="img-fluid rounded pl-4 img-about" alt="#">
         </div>
         <div class="col-md-6 pt-sm-2">
-          <p class="pt-2 text-about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse
-            lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.
-            Maecenas
-            ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est
-            eleifend mi, non fermentum diam nisl sit amet erat.</p>
-          <p class="pt-2 text-about"> Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.
-            Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue.</p>
-          <p class="pt-2 text-about">Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut
-            augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-            Curae;
-            Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales
-            hendrerit.</p>
+          <p class="pt-2 text-about">Photographe autodidacte, également professeur de philosophie non-aristotélicienne, Wildo Coda a commencé à photographier dès son plus jeune âge. Il se distingue depuis 2007 en remportant plusieurs prix nationaux et internationaux, dont l'International Emerging Artist pour sa photo d'Edouard Balladur nu avec des bottes de latex montantes, le National Geographic Award pour sa série sur les pingouins migrateurs de Patagonie du sud-ouest, et enfin le prix Pulitzer pour sa remarquable enquête sur les développeurs web obligés de se prostituer pour survivre lors de la crise des subprimes aux Etats-Unis.</p>
+
+          <p class="pt-2 text-about"> Jamais à cours d'idées originales, Wildo est un touche à tout et un expérimentateur hors pair. Il apprécie particulièrement l'humoir noir et croque l'absurdité du monde quotidien par des photographies entre rêve et réalité.</p>
+
+          <p class="pt-2 text-about">Wildo Coda et son jumeau, Flash Kodak, grandirent avec la même passion de la photographie. Cependant, là où Wildo privilégie une approche ouverte et protéiforme (argentique et numérique), Flash ne jure que par la pureté des bains de sels d'argents. Flash et Wildo s'opposent maintenant régulièrement sur la scène photographique parisienne.</p>
+
+          <p class="pt-2 text-about"><strong>Ses distinctions:</strong></p>
+
+          <ul>
+            <li>2016 -  prix Pulitzer, section néo-anthropologie du monde post-moderne</li>
+            <li>2013 - National Geographic Award, sélectionné dans la catégorie "Pingouins"</li>
+            <li>2009 - Lauréat du prix International Emerging Artist Award, catégorie "Les hommes politiques à nu"</li>
+            <li>2007 - International Men photographers Award, catégorie "Photographie ton chat"</li>
+          </ul>
+
         </div>
       </div>
 
